@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.1 2018/03/02 19:04:13 minskim Exp $
+$NetBSD: distinfo,v 1.2 2019/07/31 20:19:10 brook Exp $
 
-SHA1 (R/prob_1.0-0.tar.gz) = 703d9f7ac67ffb1198a28955078fdca1853fe953
-RMD160 (R/prob_1.0-0.tar.gz) = b95f0c25f0ba0147619a1532b290308ca0fe17cc
-SHA512 (R/prob_1.0-0.tar.gz) = 6dff09d4b3a21b7ea3cbea82be754e1147e881da5a00a534d9e98f29a6400b7ab3a2ed9bf0e8e807455ab5d1e5b3f9857b22005922a959c81592122f07edd3c3
-Size (R/prob_1.0-0.tar.gz) = 653781 bytes
+SHA1 (R/prob_1.0-1.tar.gz) = 5bd048a84007abfd87c74b2c3fc68c6ead50528a
+RMD160 (R/prob_1.0-1.tar.gz) = acc97be7d06438ce54c29742ee82964aef6b3a25
+SHA512 (R/prob_1.0-1.tar.gz) = 0f8756a2feee961f6d91720653449efdcb6852c94cfefeb33440299527bf988f1fd88fc6802fa0e56cef00f3bf86efa82b5ed53773dd5570297dc1df3a7f2560
+Size (R/prob_1.0-1.tar.gz) = 655001 bytes
